--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: stock-chat-assistant
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn stock_chat_assistant.wsgi:application
+    startCommand: gunicorn stockchat.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: stock_chat_assistant.settings
+        value: stockchat.settings
       - key: SECRET_KEY
         value: $djy&v)k^^owk%clqu!=80^s##s4of@+b0&sf(xlu080kjzzob
